tests/lean/302.lean.expected.out
302.lean:1:8-1:11: error: Function expected at
  m
but this term has type
  ?m

Note: Expected a function because this term is being applied to the argument
  0

Hint: This error occurred after the identifiers `m`, `a`, and `t` had been identified as free variables and automatically given implicit bindings. Are those identifiers all supposed to be implicitly bound? Automatic implicit binding can sometimes occur due to typos or missing `import` or `open` statements, and this may cause unexpected errors.
